torntools/scripts/content/home/ttHome.css
/* Networth */
.tt-networth-li {
	padding: 5px 3px 3px 7px;
}

.tt-networth-table {
	width: 100%;
}

.tt-networth-table th {
	font-weight: 600;
	padding-bottom: 5px;
}

.tt-networth-table td {
	padding-bottom: 4px !important;
}

.dark-mode table.tt-networth-table td {
	color: white;
}

.tt-networth-table .negative-change {
	color: #de0000 !important;
	font-weight: 800;
}

.tt-networth-table .positive-change {
	color: #00a500 !important;
	font-weight: 800;
}

.tt-networth-footer {
	padding-top: 4px;
	border-top: 1px solid lightgrey;
}

#ttLiveNetworth {
	background: repeating-linear-gradient(90deg, #627e0d, #627e0d 2px, #6e8820 0, #6e8820 4px);
	color: white;
}

#ttIframe {
	height: 1350px;
	width: 1085px;
	background-color: white;
}

